# MathematicaConsole

./: .gitignore  AndroidManifest.xml  MANIFEST.in  MainActivity.java  MainPage.xaml  MainPage.xaml.cs  MathToolsApp.csproj  MathematicaConsole.csproj  MauiProgram.cs  MyAndroidApp.sln  Program.cs  README.md  aperture4.csproj  autocomplete.py  build.gradle.kts  buildozer.spec  capacitor.config.ts  config.xml  editor.html  gradle.properties  gradlew  index.html  package.json  pubspec.yaml  pyproject.toml  python-notebook.html  requirements.txt  script.js  setup.py
.github/workflows/: build-android.yml  build-apk.yml  build-docker.yml  build.yml  fast-jupyter-apk.yml
Services/: AlgebraSolver.cs  CalculusEngine.cs  UnitConverter.cs
app/: proguard-rules.pro
app/src/main/java/com/mathengine/: HistoryDao.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
frontend/: package.json
github/workflows/: android-build.yml  fast-jupyter-apk.yml
gitthub/workflows/: build-android.yml
lib/screens/: editor_screen.dart
lib/services/: execution_service.dart
lib/widgets/: code_editor.dart  popup_code_editor.dart
public/: index.html
src/: App.js
src/MyAndroidApp/: MainActivity.cs
src/components/: Navigation.jsx
src/components/public/: index.html  manifest.json
src/components/src/styles/: App.css
src/components/src/utils/: mathParser.js
src/mathematica_console/: __init__.py  console.py  history.py  main.py  math_engine.py  plot_widget.py
src/mathematica_console/resources/: function.txt
